--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-debug-toolbar = "^2.2"
 werkzeug = "^1.0.1"
 django-environ = "^0.4.5"
 django-registration-redux = "^2.8"
+django-gravatar2 = "^1.4.4"
 
 [tool.poetry.dev-dependencies]
 
